# Spyder

./: .gitignore  Cargo.toml
Sandbox/: Cargo.toml
Sandbox/src/: lib.rs
Spyder/: Cargo.toml
Spyder/src/: lib.rs
Spyder/src/core/: application.rs  layer_stack.rs  mod.rs  window.rs
Spyder/src/events/: application_events.rs  event.rs  mod.rs
assets/shaders/: tri.frag  tri.vert
crates/app_base/: Cargo.toml
crates/app_base/src/: app.rs  lib.rs  plugin.rs
crates/ecs/src/: entity.rs  lib.rs  world.rs
crates/error/examples/: basic.rs
crates/error/src/: lib.rs
crates/event_manager/: Cargo.toml
crates/event_manager/examples/: basic.rs
crates/event_manager/src/: lib.rs
crates/gpu_memory_manager/: Cargo.toml
crates/gpu_memory_manager/src/: allocator.rs  allocator_types.rs  lib.rs  utils.rs
crates/logger/: Cargo.toml
crates/logger/examples/: basic.rs
crates/logger/src/: lib.rs
crates/renderer_base/: Cargo.toml
crates/renderer_macros/: Cargo.toml
crates/renderer_macros/examples/: basic.rs  included.glsl  test.vert
crates/renderer_macros/src/: lib.rs
crates/renderer_rasterization/: Cargo.toml
crates/renderer_rasterization/src/: lib.rs
crates/resource_manager/: Cargo.toml
crates/resource_manager/examples/: basic.rs
crates/resource_manager/src/: lib.rs
crates/resource_manager/tests/: test.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/util_macros/: Cargo.toml
crates/util_macros/src/: bitflags.rs
crates/utils_macros/: Cargo.toml
crates/window/: Cargo.toml
examples/: basic.rs
src/: lib.rs  main.rs
(+8 files in other folders)
